# geoml

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md  REUSE.toml  conanfile.py  environment.yml
bindings/python/: CMakeLists.txt  Doxyfile.in  common.i  pygeoml.i  pyproject.toml  setup.py
bindings/python/geoml/: __init__.py
bindings/python/python_tests/: test_geoml_python_bindings.py
examples/: CMakeLists.txt  fuselage_wing_configuration.cpp  test_main_2.cpp
src/: CMakeLists.txt  Cache.h  geoml_config.h.in
src/boolean_operations/: BOPBuilderShapeToBRepBuilderShapeAdapter.cpp  BOPBuilderShapeToBRepBuilderShapeAdapter.h  BRepSewingToBRepBuilderShapeAdapter.cpp  BRepSewingToBRepBuilderShapeAdapter.h  CBooleanOperTools.cpp  CBooleanOperTools.h  CBopCommon.cpp  CBopCommon.h  CCutShape.cpp  CCutShape.h  CFuseShapes.cpp  CFuseShapes.h  CGroupShapes.cpp  CGroupShapes.h  CMergeShapes.cpp  CMergeShapes.h  CTrimShape.cpp  CTrimShape.h  GEOMAlgo_Splitter.cxx  GEOMAlgo_Splitter.hxx  Splitter.cpp  Splitter.h
src/common/: COptionList.h  CommonFunctions.cpp  CommonFunctions.h  Debugging.cpp  Debugging.h  ad_utility_function.h  any.h  sorting.h  stringtools.h  to_string.h  typename.cpp  typename.h
src/contrib/: MakeLoops.cxx  MakeLoops.hxx  MakePatches.cxx  MakePatches.hxx  SurfTools.cxx  SurfTools.hxx
src/exports/: CADExporter.cpp  CADExporter.h  CCPACSImportExport.h  CGlobalExporterConfigs.cpp  CGlobalExporterConfigs.h  ExportBrep.cpp  ExportBrep.h  ExportIges.cpp  ExportIges.h  ExportStep.cpp  ExportStep.h  ExportStl.cpp  ExportStl.h  ExporterFactory.cpp  ExporterFactory.h
src/geometry/: 2d_collection.h  ApproxResult.h  ArcLengthReparameterization.cpp  ArcLengthReparameterization.h  BSplineAlgorithms.cpp  BSplineAlgorithms.h  BSplineApproxInterp.cpp  BSplineApproxInterp.h  BSplineFit.cpp  BSplineFit.h  CCSTCurveBuilder.cpp  CCSTCurveBuilder.h  CFunctionToBspline.cpp  CFunctionToBspline.h  CPointsToLinearBSpline.cpp  CPointsToLinearBSpline.h  CompoundSurface.cpp  CompoundSurface.h  ConcatSurfaces.cpp  ConcatSurfaces.h  Continuity.h  CurvesToSurface.cpp  CurvesToSurface.h  InterpolatePointsWithKinks.cpp  InterpolatePointsWithKinks.h  IntersectionPoint.h  List2d.h  Point.cpp  Point.h  PointsToBSplineInterpolation.cpp  PointsToBSplineInterpolation.h  ProjectOnLinearSpline.cpp  ProjectOnLinearSpline.h  RectGridSurface.h  Transformation.cpp  Transformation.h  Vector2d.cpp  Vector2d.h
src/geometry/curve-networks/: CurveNetworkSorter.cpp  CurveNetworkSorter.h  GordonSurfaceBuilder.cpp  GordonSurfaceBuilder.h  InterpolateCurveNetwork.cpp  InterpolateCurveNetwork.h
src/geoml/: Continuity.h  error.cpp  error.h  geoml.cpp  geoml.h  geoml_internal.h
src/geoml/boolean_ops/: modeling.cpp  modeling.h  modeling.hpp
src/geoml/curves/: BlendCurve.cpp  BlendCurve.h  curves.cpp  curves.h  modeling.cpp  modeling.h
src/geoml/data_structures/: Array2d.cpp  Array2d.h  Vector2d.h  conversions.h
src/geoml/geom_topo/: modeling.cpp  modeling.h
src/geoml/geom_topo_conversions/: geom_topo_conversions.cpp  geom_topo_conversions.h
src/geoml/naming_choosing/: BRepBuilderAPI_MakeShape_Operation.cpp  BRepBuilderAPI_MakeShape_Operation.hpp  MetaDataStore.cpp  MetaDataStore.hpp  Operation.hpp  Shape.cpp  Shape.h  Shape.hpp  common.cpp  common.hpp
src/geoml/predicates/: ShapePredicate.cpp  ShapePredicate.hpp  predicate_functions.cpp  predicate_functions.h  predicate_functions.hpp  temp_predicates.cpp  temp_predicates.h
src/geoml/primitives/: modeling.cpp  modeling.h  modeling.hpp
src/geoml/surface/: modeling.h
src/geoml/surfaces/: modeling.cpp  modeling.h  surfaces.cpp  surfaces.h
src/geoml/transformations/: Transform.cpp  Transform.h  modeling.cpp  modeling.h  transformations.cpp  transformations.h
src/geoml/utilities/: utilities.cpp  utilities.h
src/geoml/utility/: modeling.cpp  modeling.h  utility.cpp  utility.h
src/geoml_backend/: BRepBuilderAPI_MakeShape_Operation.hpp
src/imports/: ICADImporter.h  ICADImporterCreator.h  ImporterFactory.cpp  ImporterFactory.h  StepReader.cpp  StepReader.h
src/logging/: ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  ILogger.h  LogSplitter.cpp  LogSplitter.h  Logging.cpp  Logging.h
src/math/: IntersectBSplines.cpp  IntersectBSplines.h  MathFunctions.cpp  MathFunctions.h  Matrix.cpp  Matrix.h  ProjectPointOnCurveAtAngle.cpp  ProjectPointOnCurveAtAngle.h
src/system/: CSharedPtr.h  TypeRegistry.cpp  TypeRegistry.h  occt_compat.h
src/topology/: BRepBuilderAPI_MakeShape_Operation.cpp  BRepBuilderAPI_MakeShape_Operation.h  BRepBuilderAPI_MakeShape_Operation.hpp  CNamedShape.cpp  CNamedShape.h  CWireToCurve.cpp  CWireToCurve.h  InterpolateWires.cpp  InterpolateWires.h  ListPNamedShape.h  MakeCompoundOperation.cpp  MakeCompoundOperation.h  MakeCompound_Operation.cpp  MakeCompound_Operation.h  Operation.h  Operation.hpp  PNamedShape.h  PatchShellTool.cpp  PatchShellTool.h  TopoAlgorithms.cpp  TopoAlgorithms.h
tests/: CMakeLists.txt
tests/apitests/: CMakeLists.txt
tests/cmake/: AddGoogleTest.cmake
tests/common/: CMakeLists.txt  test.h  testUtils.h
tests/python/: test_boolean_ops.py  test_curves.py  test_data_structures.py  test_geom_topo_conversions.py  test_geoml_python_bindings.py  test_occ_helpers_containers.py  test_predicate_functions.py  test_primitives.py  test_shape.py  test_surfaces.py  test_transformations.py  test_utilities.py
tests/unittests/: CMakeLists.txt  chebychevApproxTests.cpp  gcovr  guideCurvePatchesMakeLoops.cpp  guideCurvePatchesMakePatches.cpp  main.cpp  testArcLengthReparameterization.cpp  testBSplineIntersection.cpp  testBSplines.cpp  testCTiglPatchShell.cpp  testCTiglRectGridSurface.cpp  testCTiglTopoAlgorithms.cpp  testCommonFunctions.cpp  testCurveNetwork.cpp  testGlobalExporterConfigs.cpp  testImport.cpp  testInterpolateWires.cpp  testLinearProjection.cpp  testMath.cpp  testOccIssues.cpp  testOptionList.cpp  testTransformation.cpp  testUtilities.cpp  testUtils.cpp  testctiglbsplinealgorithms.cpp  testctiglcurvestosurface.cpp  testprojectionatangle.cpp  testsorting.cpp
(+42 files in other folders)
